namespace java com.heepay.rpc.tpds.model

struct DepositMsgVO {
   1: i32 code;
   2: string msg;

}